User and Event Model and Services for backend

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -26,6 +26,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="-14dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/back_button"
@@ -50,7 +51,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="140dp"
         android:fontFamily="@font/airbnb_cereal_w_bd"
         android:text="@string/please_enter_your_email_address_to_request_a_password_reset"
         android:textColor="@color/black"
