--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -22,7 +22,7 @@
         app:layout_constraintGuide_end="24dp" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/backBtnInNotificationFragIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/notificationFragScreenNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -39,12 +39,12 @@
         android:text="Notification"
         android:textColor="@color/black"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
-        app:layout_constraintStart_toEndOf="@+id/imageView20"
-        app:layout_constraintTop_toTopOf="@+id/imageView20" />
+        app:layout_constraintBottom_toBottomOf="@+id/backBtnInNotificationFragIV"
+        app:layout_constraintStart_toEndOf="@+id/backBtnInNotificationFragIV"
+        app:layout_constraintTop_toTopOf="@+id/backBtnInNotificationFragIV" />
 
     <ImageView
-        android:id="@+id/imageView21"
+        android:id="@+id/noNotificationsIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -52,10 +52,10 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/notificationFragGuideLine2"
         app:layout_constraintStart_toStartOf="@id/notificationFragGuideLine1"
-        app:layout_constraintTop_toBottomOf="@id/textView6" />
+        app:layout_constraintTop_toBottomOf="@id/notificationFragScreenNameTV" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/noNotificationsTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -66,14 +66,17 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/notificationFragGuideLine2"
         app:layout_constraintStart_toStartOf="@id/notificationFragGuideLine1"
-        app:layout_constraintTop_toBottomOf="@id/imageView21" />
+        app:layout_constraintTop_toBottomOf="@id/noNotificationsIV" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/notificationItemRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="-24dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/notificationFragGuideLine2"
         app:layout_constraintStart_toStartOf="@id/notificationFragGuideLine1"
-        app:layout_constraintTop_toBottomOf="@id/textView6" />
+        app:layout_constraintTop_toBottomOf="@id/notificationFragScreenNameTV"
+        tools:listitem="@layout/notification_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
