Working Client User Profile

--- a/app/src/main/res/layout/fragment_see_all_events.xml
+++ b/app/src/main/res/layout/fragment_see_all_events.xml
@@ -22,40 +22,57 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="24dp" />
 
-    <ImageView
-        android:id="@+id/backBtnSeeAllEventFragIV"
-        android:layout_width="wrap_content"
+    <!-- Header Layout -->
+    <LinearLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:importantForAccessibility="no"
-        android:src="@drawable/back"
-        app:layout_constraintBottom_toBottomOf="@id/seeAllEventsScreenNameTV"
-        app:layout_constraintStart_toStartOf="@id/SeeAllEventsGuideLine1"
-        app:layout_constraintTop_toTopOf="@+id/seeAllEventsScreenNameTV"
-        app:tint="@color/black" />
-
-    <TextView
-        android:id="@+id/seeAllEventsScreenNameTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/airbnb_cereal_w_xbd"
-        android:text="@string/events"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@id/backBtnSeeAllEventFragIV"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/searchBtnIV"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:importantForAccessibility="no"
-        android:src="@drawable/car_ui_icon_search"
-        app:layout_constraintBottom_toBottomOf="@id/seeAllEventsScreenNameTV"
+        android:orientation="horizontal"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@id/SeeAllEventsGuideLine2"
-        app:layout_constraintTop_toTopOf="@id/seeAllEventsScreenNameTV"
-        app:tint="@color/black" />
+        app:layout_constraintStart_toStartOf="@id/SeeAllEventsGuideLine1"
+        app:layout_constraintTop_toTopOf="parent"> <!-- Default to visible -->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/backBtnSeeAllEventFragIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black" />
+
+            <TextView
+                android:id="@+id/seeAllEventsScreenNameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:fontFamily="@font/airbnb_cereal_w_xbd"
+                android:text="@string/events"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="@id/backBtnSeeAllEventFragIV"
+                app:layout_constraintStart_toEndOf="@id/backBtnSeeAllEventFragIV"
+                app:layout_constraintTop_toTopOf="@+id/searchBtnIV" />
+
+            <ImageView
+                android:id="@+id/searchBtnIV"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/car_ui_icon_search"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="@color/black" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventsRecyclerViewInSeeAllEvents"
@@ -65,6 +82,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/SeeAllEventsGuideLine2"
         app:layout_constraintStart_toStartOf="@id/SeeAllEventsGuideLine1"
-        app:layout_constraintTop_toBottomOf="@id/seeAllEventsScreenNameTV"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
         tools:listitem="@layout/event_card_for_search_view_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
