--- a/app/src/main/res/layout/fragment_organizer_profile.xml
+++ b/app/src/main/res/layout/fragment_organizer_profile.xml
@@ -24,10 +24,10 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView4"
         android:name="com.example.eventbrite.MyProfileFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/organizerProfileFragGuideLine2"
+        app:layout_constraintStart_toStartOf="@id/organizerProfileFragGuideLine1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -75,7 +75,9 @@
         android:id="@+id/tabFragmentContainerView"
         android:name="com.example.eventbrite.AboutFragment"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/organizerProfileFragGuideLine2"
         app:layout_constraintStart_toStartOf="@id/organizerProfileFragGuideLine1"
         app:layout_constraintTop_toBottomOf="@id/tabLayoutOrganizerProfile" />
