--- a/app/src/main/res/layout/fragment_organizer_profile.xml
+++ b/app/src/main/res/layout/fragment_organizer_profile.xml
@@ -34,7 +34,7 @@
         android:id="@+id/imageView19"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginEnd="-80dp"
+        android:layout_marginEnd="-48dp"
         android:backgroundTint="@color/white"
         android:elevation="2dp"
         android:importantForAccessibility="no"
@@ -51,7 +51,7 @@
         android:backgroundTint="@color/eventbrite_card_blue"
         android:fontFamily="@font/airbnb_cereal_w_xbd"
         android:text="@string/follow"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:cornerRadius="10dp"
